fix: adjust overflow x & mobile menu social media and auth distribution

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -145,3 +145,7 @@
   width: 5px;
   height: 5px;
 }
+
+body{
+  overflow-x: hidden;
+}
